GraphQL/As.GraphQL.Antlr/GraphQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\colin\Documents\GitHub\AS2017B\AS2017B\src\AS.GraphQL\GraphQL.g4 by ANTLR 4.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;
using GraphQL;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6")]
public partial class GraphQLParser : Parser
{
    protected static DFA[] decisionToDFA;
    protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
    public const int
        T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
        T__9 = 10, T__10 = 11, T__11 = 12, T__12 = 13, T__13 = 14, T__14 = 15, T__15 = 16, T__16 = 17,
        BOOLEAN = 18, NAME = 19, STRING = 20, NUMBER = 21, WS = 22, COMMENT = 23;
    public const int
        RULE_document = 0, RULE_definition = 1, RULE_operationDefinition = 2,
        RULE_selectionSet = 3, RULE_operationType = 4, RULE_selection = 5, RULE_field = 6,
        RULE_fieldName = 7, RULE_alias = 8, RULE_arguments = 9, RULE_argument = 10,
        RULE_fragmentSpread = 11, RULE_inlineFragment = 12, RULE_fragmentDefinition = 13,
        RULE_fragmentName = 14, RULE_directives = 15, RULE_directive = 16, RULE_typeCondition = 17,
        RULE_variableDefinitions = 18, RULE_variableDefinition = 19, RULE_variable = 20,
        RULE_defaultValue = 21, RULE_valueOrVariable = 22, RULE_value = 23, RULE_type = 24,
        RULE_typeName = 25, RULE_listType = 26, RULE_nonNullType = 27, RULE_array = 28,
        RULE_object = 29;
    public static readonly string[] ruleNames = {
        "document", "definition", "operationDefinition", "selectionSet", "operationType",
        "selection", "field", "fieldName", "alias", "arguments", "argument", "fragmentSpread",
        "inlineFragment", "fragmentDefinition", "fragmentName", "directives",
        "directive", "typeCondition", "variableDefinitions", "variableDefinition",
        "variable", "defaultValue", "valueOrVariable", "value", "type", "typeName",
        "listType", "nonNullType", "array", "object"
    };

    private static readonly string[] _LiteralNames = {
        null, "'{'", "','", "'}'", "'query'", "'mutation'", "':'", "'('", "')'",
        "'...'", "'on'", "'fragment'", "'@'", "'$'", "'='", "'['", "']'", "'!'"
    };
    private static readonly string[] _SymbolicNames = {
        null, null, null, null, null, null, null, null, null, null, null, null,
        null, null, null, null, null, null, "BOOLEAN", "NAME", "STRING", "NUMBER",
        "WS", "COMMENT"
    };
    public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

    [NotNull]
    public override IVocabulary Vocabulary
    {
        get
        {
            return DefaultVocabulary;
        }
    }

    public override string GrammarFileName { get { return "GraphQL.g4"; } }

    public override string[] RuleNames { get { return ruleNames; } }

    public override string SerializedAtn { get { return _serializedATN; } }

    static GraphQLParser()
    {
        decisionToDFA = new DFA[_ATN.NumberOfDecisions];
        for (int i = 0; i < _ATN.NumberOfDecisions; i++)
        {
            decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
        }
    }

    public GraphQLParser(ITokenStream input)
        : base(input)
    {
        Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
    }
    public partial class DocumentContext : ParserRuleContext
    {
        public DefinitionContext[] definition()
        {
            return GetRuleContexts<DefinitionContext>();
        }
        public DefinitionContext definition(int i)
        {
            return GetRuleContext<DefinitionContext>(i);
        }
        public DocumentContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_document; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterDocument(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitDocument(this);
        }
    }

    [RuleVersion(0)]
    public DocumentContext document()
    {
        DocumentContext _localctx = new DocumentContext(Context, State);
        EnterRule(_localctx, 0, RULE_document);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 61;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                do
                {
                    {
                        {
                            State = 60; definition();
                        }
                    }
                    State = 63;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << T__4) | (1L << T__10))) != 0));
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class DefinitionContext : ParserRuleContext
    {
        public OperationDefinitionContext operationDefinition()
        {
            return GetRuleContext<OperationDefinitionContext>(0);
        }
        public FragmentDefinitionContext fragmentDefinition()
        {
            return GetRuleContext<FragmentDefinitionContext>(0);
        }
        public DefinitionContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_definition; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterDefinition(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitDefinition(this);
        }
    }

    [RuleVersion(0)]
    public DefinitionContext definition()
    {
        DefinitionContext _localctx = new DefinitionContext(Context, State);
        EnterRule(_localctx, 2, RULE_definition);
        try
        {
            State = 67;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T__0:
                case T__3:
                case T__4:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 65; operationDefinition();
                    }
                    break;
                case T__10:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 66; fragmentDefinition();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class OperationDefinitionContext : ParserRuleContext
    {
        public SelectionSetContext selectionSet()
        {
            return GetRuleContext<SelectionSetContext>(0);
        }
        public OperationTypeContext operationType()
        {
            return GetRuleContext<OperationTypeContext>(0);
        }
        public ITerminalNode NAME() { return GetToken(GraphQLParser.NAME, 0); }
        public VariableDefinitionsContext variableDefinitions()
        {
            return GetRuleContext<VariableDefinitionsContext>(0);
        }
        public DirectivesContext directives()
        {
            return GetRuleContext<DirectivesContext>(0);
        }
        public OperationDefinitionContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_operationDefinition; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterOperationDefinition(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitOperationDefinition(this);
        }
    }

    [RuleVersion(0)]
    public OperationDefinitionContext operationDefinition()
    {
        OperationDefinitionContext _localctx = new OperationDefinitionContext(Context, State);
        EnterRule(_localctx, 4, RULE_operationDefinition);
        int _la;
        try
        {
            State = 80;
            ErrorHandler.Sync(this);
            switch (TokenStream.LA(1))
            {
                case T__0:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 69; selectionSet();
                    }
                    break;
                case T__3:
                case T__4:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 70; operationType();
                        State = 71; Match(NAME);
                        State = 73;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                        if (_la == T__6)
                        {
                            {
                                State = 72; variableDefinitions();
                            }
                        }

                        State = 76;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                        if (_la == T__11)
                        {
                            {
                                State = 75; directives();
                            }
                        }

                        State = 78; selectionSet();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class SelectionSetContext : ParserRuleContext
    {
        public SelectionContext[] selection()
        {
            return GetRuleContexts<SelectionContext>();
        }
        public SelectionContext selection(int i)
        {
            return GetRuleContext<SelectionContext>(i);
        }
        public SelectionSetContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_selectionSet; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterSelectionSet(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitSelectionSet(this);
        }
    }

    [RuleVersion(0)]
    public SelectionSetContext selectionSet()
    {
        SelectionSetContext _localctx = new SelectionSetContext(Context, State);
        EnterRule(_localctx, 6, RULE_selectionSet);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 82; Match(T__0);
                State = 83; selection();
                State = 90;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__8) | (1L << NAME))) != 0))
                {
                    {
                        {
                            State = 85;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            if (_la == T__1)
                            {
                                {
                                    State = 84; Match(T__1);
                                }
                            }

                            State = 87; selection();
                        }
                    }
                    State = 92;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 93; Match(T__2);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class OperationTypeContext : ParserRuleContext
    {
        public OperationTypeContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_operationType; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterOperationType(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitOperationType(this);
        }
    }

    [RuleVersion(0)]
    public OperationTypeContext operationType()
    {
        OperationTypeContext _localctx = new OperationTypeContext(Context, State);
        EnterRule(_localctx, 8, RULE_operationType);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 95;
                _la = TokenStream.LA(1);
                if (!(_la == T__3 || _la == T__4))
                {
                    ErrorHandler.RecoverInline(this);
                }
                else
                {
                    ErrorHandler.ReportMatch(this);
                    Consume();
                }
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class SelectionContext : ParserRuleContext
    {
        public FieldContext field()
        {
            return GetRuleContext<FieldContext>(0);
        }
        public FragmentSpreadContext fragmentSpread()
        {
            return GetRuleContext<FragmentSpreadContext>(0);
        }
        public InlineFragmentContext inlineFragment()
        {
            return GetRuleContext<InlineFragmentContext>(0);
        }
        public SelectionContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_selection; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterSelection(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitSelection(this);
        }
    }

    [RuleVersion(0)]
    public SelectionContext selection()
    {
        SelectionContext _localctx = new SelectionContext(Context, State);
        EnterRule(_localctx, 10, RULE_selection);
        try
        {
            State = 100;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 7, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 97; field();
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 98; fragmentSpread();
                    }
                    break;
                case 3:
                    EnterOuterAlt(_localctx, 3);
                    {
                        State = 99; inlineFragment();
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FieldContext : ParserRuleContext
    {
        public FieldNameContext fieldName()
        {
            return GetRuleContext<FieldNameContext>(0);
        }
        public ArgumentsContext arguments()
        {
            return GetRuleContext<ArgumentsContext>(0);
        }
        public DirectivesContext directives()
        {
            return GetRuleContext<DirectivesContext>(0);
        }
        public SelectionSetContext selectionSet()
        {
            return GetRuleContext<SelectionSetContext>(0);
        }
        public FieldContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_field; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterField(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitField(this);
        }
    }

    [RuleVersion(0)]
    public FieldContext field()
    {
        FieldContext _localctx = new FieldContext(Context, State);
        EnterRule(_localctx, 12, RULE_field);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 102; fieldName();
                State = 104;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__6)
                {
                    {
                        State = 103; arguments();
                    }
                }

                State = 107;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__11)
                {
                    {
                        State = 106; directives();
                    }
                }

                State = 110;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__0)
                {
                    {
                        State = 109; selectionSet();
                    }
                }

            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FieldNameContext : ParserRuleContext
    {
        public AliasContext alias()
        {
            return GetRuleContext<AliasContext>(0);
        }
        public ITerminalNode NAME() { return GetToken(GraphQLParser.NAME, 0); }
        public FieldNameContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_fieldName; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterFieldName(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitFieldName(this);
        }
    }

    [RuleVersion(0)]
    public FieldNameContext fieldName()
    {
        FieldNameContext _localctx = new FieldNameContext(Context, State);
        EnterRule(_localctx, 14, RULE_fieldName);
        try
        {
            State = 114;
            ErrorHandler.Sync(this);
            switch (Interpreter.AdaptivePredict(TokenStream, 11, Context))
            {
                case 1:
                    EnterOuterAlt(_localctx, 1);
                    {
                        State = 112; alias();
                    }
                    break;
                case 2:
                    EnterOuterAlt(_localctx, 2);
                    {
                        State = 113; Match(NAME);
                    }
                    break;
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class AliasContext : ParserRuleContext
    {
        public ITerminalNode[] NAME() { return GetTokens(GraphQLParser.NAME); }
        public ITerminalNode NAME(int i)
        {
            return GetToken(GraphQLParser.NAME, i);
        }
        public AliasContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_alias; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterAlias(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitAlias(this);
        }
    }

    [RuleVersion(0)]
    public AliasContext alias()
    {
        AliasContext _localctx = new AliasContext(Context, State);
        EnterRule(_localctx, 16, RULE_alias);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 116; Match(NAME);
                State = 117; Match(T__5);
                State = 118; Match(NAME);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ArgumentsContext : ParserRuleContext
    {
        public ArgumentContext[] argument()
        {
            return GetRuleContexts<ArgumentContext>();
        }
        public ArgumentContext argument(int i)
        {
            return GetRuleContext<ArgumentContext>(i);
        }
        public ArgumentsContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_arguments; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterArguments(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitArguments(this);
        }
    }

    [RuleVersion(0)]
    public ArgumentsContext arguments()
    {
        ArgumentsContext _localctx = new ArgumentsContext(Context, State);
        EnterRule(_localctx, 18, RULE_arguments);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 120; Match(T__6);
                State = 121; argument();
                State = 126;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                while (_la == T__1)
                {
                    {
                        {
                            State = 122; Match(T__1);
                            State = 123; argument();
                        }
                    }
                    State = 128;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                }
                State = 129; Match(T__7);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class ArgumentContext : ParserRuleContext
    {
        public ITerminalNode NAME() { return GetToken(GraphQLParser.NAME, 0); }
        public ValueOrVariableContext valueOrVariable()
        {
            return GetRuleContext<ValueOrVariableContext>(0);
        }
        public ArgumentContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_argument; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterArgument(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitArgument(this);
        }
    }

    [RuleVersion(0)]
    public ArgumentContext argument()
    {
        ArgumentContext _localctx = new ArgumentContext(Context, State);
        EnterRule(_localctx, 20, RULE_argument);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 131; Match(NAME);
                State = 132; Match(T__5);
                State = 133; valueOrVariable();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FragmentSpreadContext : ParserRuleContext
    {
        public FragmentNameContext fragmentName()
        {
            return GetRuleContext<FragmentNameContext>(0);
        }
        public DirectivesContext directives()
        {
            return GetRuleContext<DirectivesContext>(0);
        }
        public FragmentSpreadContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_fragmentSpread; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterFragmentSpread(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitFragmentSpread(this);
        }
    }

    [RuleVersion(0)]
    public FragmentSpreadContext fragmentSpread()
    {
        FragmentSpreadContext _localctx = new FragmentSpreadContext(Context, State);
        EnterRule(_localctx, 22, RULE_fragmentSpread);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 135; Match(T__8);
                State = 136; fragmentName();
                State = 138;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__11)
                {
                    {
                        State = 137; directives();
                    }
                }

            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class InlineFragmentContext : ParserRuleContext
    {
        public TypeConditionContext typeCondition()
        {
            return GetRuleContext<TypeConditionContext>(0);
        }
        public SelectionSetContext selectionSet()
        {
            return GetRuleContext<SelectionSetContext>(0);
        }
        public DirectivesContext directives()
        {
            return GetRuleContext<DirectivesContext>(0);
        }
        public InlineFragmentContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_inlineFragment; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterInlineFragment(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitInlineFragment(this);
        }
    }

    [RuleVersion(0)]
    public InlineFragmentContext inlineFragment()
    {
        InlineFragmentContext _localctx = new InlineFragmentContext(Context, State);
        EnterRule(_localctx, 24, RULE_inlineFragment);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 140; Match(T__8);
                State = 141; Match(T__9);
                State = 142; typeCondition();
                State = 144;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__11)
                {
                    {
                        State = 143; directives();
                    }
                }

                State = 146; selectionSet();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FragmentDefinitionContext : ParserRuleContext
    {
        public FragmentNameContext fragmentName()
        {
            return GetRuleContext<FragmentNameContext>(0);
        }
        public TypeConditionContext typeCondition()
        {
            return GetRuleContext<TypeConditionContext>(0);
        }
        public SelectionSetContext selectionSet()
        {
            return GetRuleContext<SelectionSetContext>(0);
        }
        public DirectivesContext directives()
        {
            return GetRuleContext<DirectivesContext>(0);
        }
        public FragmentDefinitionContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_fragmentDefinition; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterFragmentDefinition(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitFragmentDefinition(this);
        }
    }

    [RuleVersion(0)]
    public FragmentDefinitionContext fragmentDefinition()
    {
        FragmentDefinitionContext _localctx = new FragmentDefinitionContext(Context, State);
        EnterRule(_localctx, 26, RULE_fragmentDefinition);
        int _la;
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 148; Match(T__10);
                State = 149; fragmentName();
                State = 150; Match(T__9);
                State = 151; typeCondition();
                State = 153;
                ErrorHandler.Sync(this);
                _la = TokenStream.LA(1);
                if (_la == T__11)
                {
                    {
                        State = 152; directives();
                    }
                }

                State = 155; selectionSet();
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class FragmentNameContext : ParserRuleContext
    {
        public ITerminalNode NAME() { return GetToken(GraphQLParser.NAME, 0); }
        public FragmentNameContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_fragmentName; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterFragmentName(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitFragmentName(this);
        }
    }

    [RuleVersion(0)]
    public FragmentNameContext fragmentName()
    {
        FragmentNameContext _localctx = new FragmentNameContext(Context, State);
        EnterRule(_localctx, 28, RULE_fragmentName);
        try
        {
            EnterOuterAlt(_localctx, 1);
            {
                State = 157; Match(NAME);
            }
        }
        catch (RecognitionException re)
        {
            _localctx.exception = re;
            ErrorHandler.ReportError(this, re);
            ErrorHandler.Recover(this, re);
        }
        finally
        {
            ExitRule();
        }
        return _localctx;
    }

    public partial class DirectivesContext : ParserRuleContext
    {
        public DirectiveContext[] directive()
        {
            return GetRuleContexts<DirectiveContext>();
        }
        public DirectiveContext directive(int i)
        {
            return GetRuleContext<DirectiveContext>(i);
        }
        public DirectivesContext(ParserRuleContext parent, int invokingState)
            : base(parent, invokingState)
        {
        }
        public override int RuleIndex { get { return RULE_directives; } }
        public override void EnterRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.EnterDirectives(this);
        }
        public override void ExitRule(IParseTreeListener listener)
        {
            IGraphQLListener typedListener = listener as IGraphQLListener;
            if (typedListener != null) typedListener.ExitDirectives(this);
        }
    }
